[package]
name = "pigeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rust-fsm = "0.6"
crossterm = "0.22"

# text
ropey = "1.3.2"
unicode-segmentation = "1.8.0"

# Logging / debugging
log = "0.4.14"
simplelog = "^0.10.0"